2019-02-17  Charlie Zender  <zender@uci.edu>

	* Emulate changes to netCDF and print _NoFill (not _NOFILL) values as true or false not 1 or 0

	* NCO 4.7.9-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.9-beta01: Waterfalls';git push
	git tag -a 4.7.9-beta01 -m 'ncremap sgs fix, sgs --map, lat/lon_dmn_nm,	whitespace ok, mpas depth, add_depth.py;ncclimo	nd_fl, nd_nbr fix;ncrcat rec_apn rbs';git push --tags

	* Add bzip2.cdl for filter testing

	* ncclimo exit with error if --dpt_fl invoked without regridder

2019-02-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.9-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.9-alpha07: Ed';git push
	git tag -a 4.7.9-alpha07 -m 'ncremap lat/lon_dmn_nm, clm_flg, alg_opt';git push --tags

	* Update ncremap documentation accordingly

	* ncremap use lat_dmn_nm/lon_dmn_nm for lat_dmn_nm_out/lon_dmn_nm_out

2019-02-15  Charlie Zender  <zender@uci.edu>

	* ncremap make --clm_flg a true flag with same meaning as -C

	* ncremap refactor to always define algorithm diagnostic alg_opt for six Tempest-types

2019-02-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.9-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.9-alpha06: Trash bags';git push
	git tag -a 4.7.9-alpha06 -m 'ncclimo nd_fl, nd_nbr fix;ncremap sgs --map, whitespace ok;GCC9 default(none) removal;clarify NC_EHDFERR, NC_EBADCHUNK errors;DGR, BG2 progress';git push --tags

	* ncremap double-quote all filenames used in command strings and verify whitespace works

	* ncremap double-quote input, output, and map-file names to allow white-space in filepaths

2019-02-12  Charlie Zender  <zender@uci.edu>

	* Merge patch by Orion Poplawski to eliminate default(none) pragma for GCC9 OpenMP 5.0

2019-02-07  Charlie Zender  <zender@uci.edu>

	* Correct some (of many) compiler warnings for GCC 4.8.2 (rhea)

	* Add netcdf.h error codes to nco_netcdf.c

2019-02-06  Charlie Zender  <zender@uci.edu>
